# Autocloud-agent

./: .gitignore  HOW_IT_WORKS.md  README.md  demo.py  design_doc.tex  experiment.py  pipeline.py  presentation.tex  program.md  pyproject.toml  report.tex  requirements.txt  stress_test.py  train.py
agents/: __init__.py  consolidation_agent.py
autocloud/: __init__.py
autocloud/agents/: __init__.py  consolidation.py  loader.py  ppo.py  scaleout.py  scheduling.py
autocloud/config/: __init__.py  paths.py  settings.py
autocloud/coordinator/: __init__.py  safety.py
autocloud/evaluation/: baselines.py  evaluator.py
autocloud/forecaster/: __init__.py  mc_dropout.py
autocloud/inference/: runner.py
autocloud/simulator/: __init__.py  cloud_env.py  engine.py  (+1 more)
autoresearch/: __init__.py  engine.py  live_loop.py  live_results.tsv  subprocess_runner.py
checkpoints/: con_actor_final.pt  con_critic_final.pt  sch_actor_final.pt  sch_critic_final.pt  so_actor_final.pt  so_critic_final.pt  training_metrics.json
configs/: default_config.py
coordinator/: __init__.py
docs/: design_doc.tex  presentation.tex  report.tex
environment/: cloud_env.py  job.py  live_buffer.py  node.py
evaluation/: __init__.py  evaluator.py
forecaster/: __init__.py  trainer.py  transformer_model.py
notebooks/: demo.ipynb  extract_stress_windows.ipynb  multiday_eval.ipynb  results.ipynb  train_forecaster.ipynb  train_rl_agents.ipynb
scripts/: evaluate.py
tests/: test_coordinator.py  test_ppo.py  test_simulator.py  test_transformer.py
training/: ema_normalizer.py  ippo_trainer.py
(+14 files in other folders)
