[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocloud"
version = "0.1.0"
description = "AutoCloud-Agent — Multi-Agent RL for Cloud Resource Management"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "gymnasium>=0.29",
    "simpy>=4.0",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["autocloud*"]
